--- a/game/data/html/sunrise/AioItemNpcs/GMShop/main.htm
+++ b/game/data/html/sunrise/AioItemNpcs/GMShop/main.htm
@@ -1,5 +1,5 @@
 <html>
-<title>GMShop</title>
+<title>iTeam Special Shop</title>
 <body>
 <center>
 <table bgcolor="444444" width=270>
@@ -55,7 +55,7 @@
 
 <table bgcolor="444444" width=85>
 <tr>
-<td align=center><button value="Castle Armor" action="bypass -h Aioitem_showMultiSellWindow_90062" width=85 height=20 back="L2UI_ct1.button_df" fore="L2UI_ct1.button_df"></td>
+<td align=center><button value="Jewels Boss" action="bypass -h Aioitem_showMultiSellWindow_90062" width=85 height=20 back="L2UI_ct1.button_df" fore="L2UI_ct1.button_df"></td>
 </tr>
 </table>
 
