atribute shop e communit

--- a/game/data/html/CommunityBoard/index.htm
+++ b/game/data/html/CommunityBoard/index.htm
@@ -1,5 +1,5 @@
 <html noscrollbar>
-<title>L2jSunrise Community Board</title>
+<title>iTeam Community Board</title>
 <body><br>
 <table width=755>
 	<tr>
@@ -260,7 +260,7 @@
 																		<table width=260 height=20 bgcolor=333333>
 																			<tr>
 																				<td width=90 align=left valign=center>
-																					<font color="99CC33">Auto Shots:</font>
+																					<font color="99CC33">Auto SFts:</font>
 																				</td>
 																				<td width=4 align=center valign=center>
 																					<button value="Change" action="bypass _bbstop_settings shotsonenter" width=60 height=21 back="L2UI_CT1.Button_DF_Down" fore="L2UI_ct1.button_df">
@@ -323,11 +323,12 @@
 																		<table width=463 height=25 background="l2ui_ct1.Windows_DF_TooltipBG">
 																			<tr>
 																				<td width=463 align=center valign=center>
-																					<center><br>1.5 month has passed since the opening.We're rly glad that server is alive, we have great online and the best community. Thats why we decided to create 2nd bonus start for newcomers and make some interesting changes for old players.<br1> For more information visit <font color=33CCFF>www.l2jsunrise.com/forum</font><br></center>
+																					<center><br>After months of hard work, we are happy to present our project by iTeam.
+																						We are in the testing phase and we would like you to test everything in the game so that when you go live you have no problems<br1> For more information visit <font color=33CCFF>www.iteam.com.br/forum</font><br></center>
 																				</td>
 																			</tr>
 																			<tr><td width=463 align=right valign=center>
-																				posted on 8/9/2015 from <font color="a22020">NeverMore</font> <br>
+																				posted on 16/10/2019 by <font color="a22020">iWings</font> <br>
 																			</td>
 																			</tr>
 																		</table>
@@ -335,11 +336,13 @@
 																		<table width=463 height=25 background="l2ui_ct1.Windows_DF_TooltipBG">
 																			<tr>
 																				<td width=463 align=center valign=center>
-																					<center><br>Dont forget to vote daily for unique rewards and prizes. You can either use our getreward command or vote from community board and claim your reward.You can vote once every 12 hours . Abusing the vote system will cause you pernament ban.</center>
+																					<center><br>Donations are really important to maintaining a healthy and playable server.
+																						we need your help!
+																						Buy VIP is cheap and helps us a lot</center>
 																				</td>
 																			</tr>
 																			<tr><td width=463 align=right valign=center>
-																				posted on 8/9/2015 from <font color="a22020">vGodFather</font> <br>
+																				posted on 16/10/2019 from <font color="a22020">iWings</font> <br>
 																			</td>
 																			</tr>
 																		</table>
@@ -347,11 +350,11 @@
 																		<table width=463 height=25 background="l2ui_ct1.Windows_DF_TooltipBG">
 																			<tr>
 																				<td width=463 align=center valign=center>
-																					<center><br>We recently updated our mmocore engine, you should not face area lag prolems anymore or stuck problems that was existing on l2j scene from c4 times. Please report any related problem or issue to our forum .<br></center>
+																					<center><br><br></center>
 																				</td>
 																			</tr>
 																			<tr><td width=463 align=right valign=center>
-																				posted on 7/9/2015 from <font color="a22020">NeverMore</font><br>
+																				 <font color="a22020"></font><br>
 																			</td>
 																			</tr>
 																		</table>
@@ -410,7 +413,7 @@
 																					<font color=#A00000>Donate</font>
 																				</td>
 																				<td width=200 align=center valign=top>
-																					<table border=0 cellspacing=0 cellpadding=0 width=32 height=32 background="Icon.etc_claw_i00">
+																					<table border=0 cellspacing=0 cellpadding=0 width=32 height=32 background="accessory_earring_of_zaken_i00">
 																						<tr>
 																							<td width=32 height=32 align=center valign=top>
 																								<button action="bypass _bbstop;instances" width=34 height=34 back="L2UI_CT1.ItemWindow_DF_Frame_Down" fore="L2UI_CT1.ItemWindow_DF_Frame"/>
